--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,29 @@
 {
 	"version": "0.2.0",
 	"configurations": [
-		{
-			"name": "Debug with gdb",
-			"type": "cppdbg",
-			"request": "launch",
-			"program": "${workspaceFolder}/minishell",
-			"args": [],
-			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}",
-			"environment": [],
-			"externalConsole": false,
-			"MIMode": "gdb",
-			"setupCommands": [
-				{
-					"description": "Enable pretty-printing for gdb",
-					"text": "-enable-pretty-printing",
-					"ignoreFailures": true
-				}
-			],
-			"preLaunchTask": "Build with make",
-			"miDebuggerPath": "/usr/bin/gdb",
-			"logging": { "engineLogging": true }
+	  {
+		"name": "Debug com Make",
+		"type": "cppdbg",
+		"request": "launch",
+		"program": "${workspaceFolder}/minishell",
+		"args": [],
+		"stopAtEntry": false,
+		"cwd": "${workspaceFolder}",
+		"environment": [],
+		"externalConsole": false,
+		"MIMode": "gdb",
+		"setupCommands": [
+		  {
+			"description": "Habilitar modo de impressão de valores",
+			"text": "-enable-pretty-printing",
+			"ignoreFailures": true
+		  }
+		],
+		"preLaunchTask": "Build com Make",
+		"miDebuggerPath": "/usr/bin/gdb",
+		"logging": {
+		  "engineLogging": true
 		}
+	  }
 	]
 }
