--- a/libs/ft_printf/Makefile
+++ b/libs/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: cshingai <cshingai@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/15 15:13:33 by cshingai          #+#    #+#              #
-#    Updated: 2024/01/11 17:30:54 by cshingai         ###   ########.fr        #
+#    Updated: 2024/12/20 21:39:57 by cshingai         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,6 +17,7 @@ INCLUDE	= include
 
 SRC	= ${addprefix src/, \
 			ft_printf.c \
+			ft_printf_fd.c \
 			ft_putchar_fd.c \
 			ft_puthex.c \
 			ft_putnbr_dec.c \
