--- a/libs/libft/Makefile
+++ b/libs/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: cshingai <cshingai@student.42.fr>          +#+  +:+       +#+         #
+#    By: lsouza-r <lsouza-r@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/19 17:34:20 by cshingai          #+#    #+#              #
-#    Updated: 2024/10/22 17:10:24 by cshingai         ###   ########.fr        #
+#    Updated: 2024/12/24 13:59:07 by lsouza-r         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,8 @@ FILES = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c 
  ft_putstr_fd.c ft_strchr.c ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c \
  ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c \
  ft_substr.c ft_tolower.c ft_toupper.c ft_strmapi.c ft_split.c ft_realloc.c \
- ft_strcmp.c \
+ ft_strcmp.c ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c \
+ ft_lstlast.c ft_lstnew.c ft_lstsize.c \
 
 FILES_O = $(FILES:%.c=%.o)
 
